Starting off, some frontend fixes first, still errors in the backend.
